--- a/views/content/checkout2.html
+++ b/views/content/checkout2.html
@@ -1217,7 +1217,7 @@
         </uib-tab>
         <uib-tab active="tabs[3].active">
           <uib-tab-heading>
-            <span class="step no-after">4</span>
+            <span class="step">4</span>
             <span class="block">payment method</span>
           </uib-tab-heading>
           <!-- <div class="row">
