new cart integrated

--- a/views/content/cart2.html
+++ b/views/content/cart2.html
@@ -89,20 +89,20 @@
           <p>Free shipping on orders above Rs. 3000 and chargeable at Rs. 200 on orders below Rs. 3000.</p>
           <div class="text-uppercase estimate">
             <h3 class="inline-block m-clear brand-brown-dark">Estimate your Shipping charges</h3>
-            <input type="number" class="" placeholder="400 002">
-            <img src="img/eligible.png" alt="check">
-            <span>you are eligible for free shipping</span>
+            <input type="number" ng-change="addShippingCharges();" ng-model="cart.shippingpincode" class="" placeholder="400 002">
+            <img ng-show="freeflag" src="img/eligible.png" alt="check">
+            <span ng-show="freeflag">you are eligible for free shipping</span>
           </div>
         </div>
         <div class="cart-grand-total clearfix brand-brown-bg brand-brown-dark font-semibold" ng-if="allcart.length>0">
           <span class="text-uppercase pull-left">Amount</span>
-          <span class="pull-right text-uppercase" ng-if="myCountry=='IN'">Rs. {{totalcart}}</span>
+          <span class="pull-right text-uppercase" ng-if="myCountry=='IN'">Rs. {{totalcart + shippingcharges}}</span>
           <span class="pull-right text-uppercase" ng-if="myCountry!='IN'">$ {{totalcartdollar}}</span>
         </div>
 
         <div class="shipping">
           <div class="row">
-            <div class="col-md-6">              
+            <div class="col-md-6">
             </div>
             <div class="col-md-6">
               <div class="text-right cart-btn">
