new cart page small fix

--- a/views/content/checkout2.html
+++ b/views/content/checkout2.html
@@ -996,7 +996,7 @@
                       <span class="brand-brown-dark ">Sub Total</span>
                     </div>
                     <div class="text-right text-uppercase pull-right price-ship">
-                      <span class="brand-brown-dark">RS .510.00</span>
+                      <span class="brand-brown-dark">Rs. {{pretotalcart}}</span>
                     </div>
                   </div>
                 </div>
