--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1503,7 +1503,7 @@ button {
     .cart-extra-info {
       padding: 20px;
       border: 2px solid #d9d9d9;
-      margin: 30px 0;
+      margin: 30px 0 0;
       h4:first-child {
         margin-bottom: 10px;
         font-size: 20px;
