--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2577,7 +2577,7 @@ footer {
 }
 .bloginfo-imgholder {
     width: 721px;
-    height: 400px;
+    // height: 400px;
     overflow: hidden;
     img {
         width: 100%;
