--- a/views/content/blogdetail.html
+++ b/views/content/blogdetail.html
@@ -130,8 +130,12 @@
                 {{tagmsg}}
               </p>
               <div class="click-tag">
-                <a class="btn btn-primary text-uppercase" ng-repeat="tag in tagger" ui-sref="blogTag({tagname:tag.name})"  >{{tag.name}}</a>
+                <a class="btn btn-primary text-uppercase" ng-repeat="tag in tagger" ui-sref="blogTag({tagname:tag.name})" ng-show="t.showTag || $index< 30" >{{tag.name}}</a>
                 <a class="btn btn-primary text-uppercase" ui-sref="blog" >All</a>
+                <div ng-if = "tagger.length > 30">
+                  <span class="pointer brand-primary" ng-show="!t.showTag" ng-click="showTag(true)">View More .. </span>
+                  <span class="pointer brand-primary" ng-show="t.showTag" ng-click="showTag(false)">View Less .. </span>
+                </div>
               </div>
             </div>
           </div>
