--- a/views/content/termsandcondition.html
+++ b/views/content/termsandcondition.html
@@ -219,6 +219,12 @@
               under the Terms &amp; Conditions but the same shall remain in full force.</p>
           </div>
         </li>
+        <li>
+          <strong>CONSENT OF CLIENT</strong>
+          <div class="term-info">
+            <p>I authorize SelfCare to use my phone number and e-mail address for providing me any information including promotions and offers related to SelfCare through sms/ call/ e-mail regarding even if my number is registered with DND Registry.</p>
+          </div>
+        </li>
     </div>
   </div>
 </section>
