--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -1050,7 +1050,7 @@
                         </div>
                         <div class="payment-detail">
                             <h3 class="brand-primary" style="display:none;">Payment Details</h3>
-                            <form method="post" name="customerData" ng-if="!payCOD" action="http://admin.selfcareindia.com/paymentgateway/ccavRequestHandler.php">
+                            <form method="post" name="customerData" ng-if="!payCOD" action="http://admin.selfcareindia.com/paymentgateway/ccavRequestHandler.php" target="_self">
                                 <div class="row" style="display:none;">
                                     <div class="col-md-5">
                                         <table>
